objects/omnistudio__DRBatchQueue__c.object
<CustomObject>
    <description>Vlocity system object used as a queue for Data Mapper batches needing to be processed.</description>
    <fields>
        <fullName>omnistudio__Action__c</fullName>
        <description>Action performed</description>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>omnistudio__DRBundleName__c</fullName>
        <label>Data Mapper Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>omnistudio__DRStatus__c</fullName>
        <defaultValue>&quot;Ready&quot;</defaultValue>
        <description>Status to process</description>
        <label>Data Mapper Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Data Mapper Batch Queue</label>
    <nameField>
        <label>Data Mapper Batch Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Mapper Batch Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>